--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,21 @@ services:
     volumes:
     - database-data:/var/lib/postgresql/data/
     expose:
-    - "5432"
+    - 5432
     networks:
       - db-network
+
+  scraper:
+    build:
+      context: scraper
+      dockerfile: Dockerfile
+    command: python3 dispatcher.py
+    ports: # use expose instead sinc internal service
+      - 40:3204
+    environment:
+      - PORT=3204
+    networks:
+      - rpc-network
 
   main-service:
     build:
@@ -20,16 +32,19 @@ services:
       dockerfile: Dockerfile
     command: npm run start
     ports: 
-      - 4000:4000
+      - 80:4000
     environment:
       - PORT=4000
     depends_on:
       - database
+      - scraper
     networks:
       - db-network
+      - rpc-network
     
 networks:
   db-network:
+  rpc-network:
 
 volumes: 
   database-data:
